# ai-agent-playground

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml  start.sh  supervisor.conf
.github/workflows/: release.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/job-history/: job-history.module.css  job-history.tsx
frontend/src/libs/: utils.ts
src/ai_agent_playground/: HeadlessAgent.py  HeadlessAgentController.py  __main__.py  app.py  job_queue.py
src/ai_agent_playground/worker/: worker.py
